[project]
name = "ComfyUI-DaSiWa-Nodes"
description = "DaSiWa Custom Nodes Collection"
version = "0.0.2"
license = {file = "LICENSE"}
dependencies = ["math"]

[project.urls]
Repository = "https://github.com/darksidewalker/ComfyUI-DaSiWa-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "darksidewalker"
DisplayName = "ComfyUI-DaSiWa-Nodes"
Icon = "https://avatars.githubusercontent.com/u/84453554"