[project]
name = "ComfyUI-DaSiWa-Nodes"
description = "DaSiWa Custom Nodes Collection"
version = "0.2.13"
license = {file = "LICENSE"}
dependencies = [
    "torch",
    "nvidia-vfx",
    "Pillow",
    "numpy",
    "transformers>=4.45.0",
    "accelerate",
    "huggingface_hub",
    "psutil>=5.9",
]

[project.urls]
Repository = "https://github.com/darksidewalker/ComfyUI-DaSiWa-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "darksidewalker"
DisplayName = "ComfyUI-DaSiWa-Nodes"
Icon = "https://avatars.githubusercontent.com/u/84453554"
